# zipp

./: .gitmodules  Cargo.toml  README.md
examples/: create.rs  open.rs  remove.rs
src/: archive.rs  consts.rs  error.rs  file.rs  lib.rs  macros.rs  source.rs  stat.rs
zipp-sys/: Cargo.toml  build.rs
zipp-sys/src/: bindings.rs  lib.rs
