[package]
name = "zipp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
libc = "0.2"
zipp-sys = { path = "zipp-sys" }


[[example]]
name = "create"

[[example]]
name = "open"


[[example]]
name = "remove"
