[package]
name = "zipp"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Jamyw7g/zipp"
readme = "README.md"
description = "Safe libzip Bindings for Rust"
license-file = "LICENSE"
keywords = ["zip", "compress", "cli", "ffi"]
categories = ["command-line-utilities", "api-bindings"]

exclude = [
	"test",
	"examples",
	"test.zip"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
zipp-sys = { path = "zipp-sys" }


[[example]]
name = "create"

[[example]]
name = "open"


[[example]]
name = "remove"
